k8-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dna-admin
  namespace: default
  labels:
    app: dna-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dna-admin
  template:
    metadata:
      labels:
        app: dna-admin
    spec:
      containers:
        - name: dna-admin
          image: dna-admin:0.1
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dna-db
  namespace: default
  labels:
    app: dna-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dna-db
  template:
    metadata:
      labels:
        app: dna-db
    spec:
      containers:
        - name: dna-db
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      volumes:
        - name: db-data
          hostPath:
            # directory location on host
            path: /data
