dna-k8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dna-admin
  namespace: default
  labels:
    app: dna
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dna
  template:
    metadata:
      labels:
        app: dna
    spec:
      containers:
      - name: dna-admin
        image: dna-admin:0.1
        imagePullPolicy: Never
<<<<<<< HEAD
          value: "instinct-dna-dd"
        # this won't be needed if using nginx
        - name: RAILS_SERVE_STATIC_FILES
          value: "1"
=======
          value: instinct-dna-dd
        # this won't be needed if using nginx
        - name: RAILS_SERVE_STATIC_FILES
          value: 1
>>>>>>> 6d11bd8 (include spree assets in precompile)
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dna-db
  namespace: default
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: dna-db
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
      volumes:
      - name: db-data
        hostPath:
          # directory location on host
          path: /data
---
apiVersion: v1
kind: Service
metadata:
  name: dna-entrypoint
  namespace: default
spec:
  type: NodePort
  selector:
    app: dna
  ports:
  - port: 3000
    nodePort: 30006
---
apiVersion: v1
kind: Service
metadata:
  name: dna-db-entrypoint
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
