k8-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dna-entrypoint
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: dna-admin
  ports:
    - port: 8080
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: db-entrypoint
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
