k8-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dna-admin
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: dna-admin
spec:
  ingressClassName: nginx
  rules:
    - host: dna-admin.instinct.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dna-entrypoint
                port:
                  number: 8080
  tls:
    - hosts:
        - dna-admin.instinct.is
      secretName: dna-admin-tls
